--- a/django_blog/blog/templates/blog/post_confirm_delete.html
+++ b/django_blog/blog/templates/blog/post_confirm_delete.html
@@ -1,7 +1,8 @@
-<h2>Are you sure you want to delete "{{ object.title }}"?</h2>
+<h1>Delete Post</h1>
+<p>Are you sure you want to delete "{{ object.title }}"?</p>
 <form method="post">
-  {% csrf_token %}
-  <button type="submit">Confirm Delete</button>
+    {% csrf_token %}
+    <button type="submit">Yes, delete</button>
 </form>
 <a href="{% url 'blog:post-detail' object.pk %}">Cancel</a>
 
