--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,10 +1,8 @@
 <h1>{{ object.title }}</h1>
 <p>{{ object.content }}</p>
-<p>By {{ object.author }}</p>
-
 {% if user == object.author %}
-  <a href="{% url 'blog:post-update' object.pk %}">Edit</a>
-  <a href="{% url 'blog:post-delete' object.pk %}">Delete</a>
+    <a href="{% url 'blog:post-update' object.pk %}">Edit</a>
+    <a href="{% url 'blog:post-delete' object.pk %}">Delete</a>
 {% endif %}
-<a href="{% url 'blog:post-list' %}">Back to Posts</a>
+<a href="{% url 'blog:post-list' %}">Back</a>
 
