--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -1,8 +1,8 @@
+<h1>All Posts</h1>
 {% for post in posts %}
-  <h2><a href="{% url 'blog:post-detail' post.pk %}">{{ post.title }}</a></h2>
-  <p>{{ post.content|truncatechars:100 }}</p>
+    <h2><a href="{% url 'blog:post-detail' post.pk %}">{{ post.title }}</a></h2>
+    <p>{{ post.content|truncatewords:20 }}</p>
 {% empty %}
-  <p>No posts yet.</p>
+    <p>No posts yet.</p>
 {% endfor %}
-<a href="{% url 'blog:post-create' %}">Create New Post</a>
 
