--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -6,3 +6,26 @@
 {% endif %}
 <a href="{% url 'blog:post-list' %}">Back</a>
 
+
+<h2>Comments</h2>
+{% for comment in post.comments.all %}
+    <p><strong>{{ comment.author }}</strong>: {{ comment.content }}</p>
+    {% if user == comment.author %}
+        <a href="{% url 'blog:comment-update' comment.pk %}">Edit</a>
+        <a href="{% url 'blog:comment-delete' comment.pk %}">Delete</a>
+    {% endif %}
+{% empty %}
+    <p>No comments yet.</p>
+{% endfor %}
+
+{% if user.is_authenticated %}
+    <h3>Leave a comment</h3>
+    <form method="post" action="{% url 'blog:comment-create' post.pk %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Post Comment</button>
+    </form>
+{% else %}
+    <p><a href="{% url 'blog:login' %}">Login</a> to comment.</p>
+{% endif %}
+
